# Sponsorflow-whataap-aut

./: .gitignore  HOSTILE_ENVIRONMENT_TEST_PLAN.md  SPONSORFLOW_V4_ARCHITECTURE.md  SPONSORFLOW_V5_AGENT_SWARM_ARCHITECTURE.md  build.gradle.kts  fix_imports.js  gradle.properties  gradlew
.github/workflows/: android-build.yml  main.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/java/com/sponsorflow/: MainActivity.kt  SponsorflowApp.kt
app/src/main/java/com/sponsorflow/agents/: SponsorflowAgent.kt  SwarmManager.kt
app/src/main/java/com/sponsorflow/core/: AntiSpamGuardian.kt  CognitiveEngine.kt  HybridIntentEngine.kt  LlamaEngine.kt  ONNXSemanticEngine.kt  Orchestrator.kt  StealthEngine.kt  TTSEngine.kt  VisionEngine.kt  VoiceEngine.kt
app/src/main/java/com/sponsorflow/data/: BusinessDao.kt  BusinessRepository.kt  CatalogDao.kt  CustomerEntity.kt  KanbanState.kt  OrderEntity.kt  ProductEntity.kt  SponsorflowDatabase.kt
app/src/main/java/com/sponsorflow/di/: AgentBindingsModule.kt  AppModule.kt
app/src/main/java/com/sponsorflow/jni/: NativeBridges.kt
app/src/main/java/com/sponsorflow/models/: AgentModels.kt
app/src/main/java/com/sponsorflow/security/: SecurityVault.kt
app/src/main/java/com/sponsorflow/services/: AccessibilityMimic.kt  ImmortalSwarmService.kt  MessageQueueManager.kt  NotificationListener.kt  ResurrectorWorker.kt  RetargetingReceiver.kt
app/src/main/res/values/: strings.xml
app/src/main/res/xml/: accessibility_service_config.xml
(+39 files in other folders)
